clusters/raspberrypi/apps/donetick/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: donetick
  namespace: donetick
spec:
  selector:
    matchLabels:
      app: donetick
  template:
    metadata:
      labels:
        app: donetick
    spec:
      containers:
      - name: donetick
        image: donetick/donetick:latest
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 2021
        volumeMounts:
        - mountPath: /donetick-data
          name: donetick-pvcs
      volumes:
      - name: donetick-pvc
        persistentVolumeClaim:
          claimName: donetick-pvc
