clusters/raspberrypi/apps/donetick/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: donetick-svc
  namespace: donetick
spec:
  selector:
    app: donetick
  ports:
  - port: 2021
    targetPort: 2021
