clusters/raspberrypi/apps/donetick/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: donetick-ingress
  namespace: donetick
spec:
  defaultBackend:
    service:
      name: donetick-svc
      port:
        number: 2021
  ingressClassName: tailscale
  tls:
  - hosts:
    - chores
